# wailord

./: .buildinfo  .gitignore  .isort.cfg  .travis.yml  AUTHORS.rst  CNAME  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.md  Makefile  README.md  README.rst  authors.html  contributing.html  default.nix  devlog.org  genindex.html  github_deploy_key.enc  history.html  index.html  installation.html  mkdocs.yml  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  readme.html  requirements.txt  scent.py  search.html  searchindex.js  setup.cfg  setup.py  shell.nix  sitemap.xml  tox.ini  usage.html
.doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
.doctrees/source/: modules.doctree  wailord.cli.doctree  wailord.doctree  wailord.exp.cookies.doctree  wailord.exp.doctree  wailord.io.doctree  wailord.io.inp.doctree  wailord.io.orca.doctree  wailord.io.xyz.doctree  wailord.utils.doctree  wailord.wailord.doctree
.github/: ISSUE_TEMPLATE.md
.github/workflows/: apidoc.yml  build_wailord.yml  doc_builder.yml  ponicode.yml  release.yml  twine_uploader.yml
_modules/: index.html
_modules/parsimonious/: grammar.html
_modules/wailord/: utils.html
_modules/wailord/exp/: cookies.html
_modules/wailord/io/: inp.html  orca.html  xyz.html
_sources/: index.rst.txt  usage.rst.txt
_sources/source/: modules.rst.txt  wailord.cli.rst.txt  wailord.exp.cookies.rst.txt  wailord.exp.rst.txt  wailord.io.inp.rst.txt  wailord.io.orca.rst.txt  wailord.io.rst.txt  wailord.io.xyz.rst.txt  wailord.rst.txt  wailord.utils.rst.txt  wailord.wailord.rst.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
docs/_static/: .gitkeep
docs/scipycon22/: betterposter.cls  refs.bib  wailord.tex
docs/source/: modules.rst  wailord.exp.rst  wailord.io.rst  wailord.rst
nix/: sources.json
source/: modules.html  wailord.cli.html  wailord.exp.cookies.html  wailord.exp.html  wailord.html  wailord.io.html  wailord.io.inp.html  wailord.io.orca.html  wailord.io.xyz.html  wailord.utils.html  wailord.wailord.html
templates/basicExperiment/: cookiecutter.json
templates/basicExperiment/hooks/: post_gen_project.py
templates/basicExperiment/{{cookiecutter.project_slug}}/: basejob.sh  orca.inp  orca.yml  readme.md
tests/: __init__.py  conftest.py  fakeCookie.py  fakeIO.py  fakeInp.py  fakeOrca.py  test_cli.py  test_io.py  test_proxy_suite.py  test_suite.py  test_wailord.py
tests/data/: cookieExp.yml  orcaGeom.inp  orcaGeom.yml  orcaSimp.inp  orcaSinglet.yml  orcaV2.yml  orca_opt.out
tests/io/: test_io.py
tests/io/orca/: test_io.py
tests/io/orca/energy_sp_calc/: test_sp.py
tests/io/orca/inpgen/: test_multxyz.py  test_orcainpgen.py
tests/io/orca/inpgen/test_multxyz/: expmult.yml  orcaMultxyz.yml
tests/io/orca/inpgen/test_multxyz/xyzdat/: ch3oh_dimer.xyz  ch3oh_single.xyz
tests/io/orca/inpgen/test_orcainpgen/: brokensym.yml  expbasic.yml  expbrsym.yml  h2mol.xyz  inp.xyz  orcaBlockKey.yml  orcaGeom.yml
tests/io/orca/singles/: test_sp.py
tests/io/orca/singles/test_sp/: b3lyp_6311g88_h2o.out  ch3f_3ang_b3lyp.out  orcaProduct.out  orcaReactant.out  orcaTS.out  orcaVPT2.out  orca_imaginary_freq.out  orca_qcisdt.out
tests/io/orca/test_io/h2/: inp.xyz  orca.yml
tests/io/orca/test_io/ir_spec/startfreq/: ch2o.xyz  co2.xyz
tests/io/orca/test_io/multiword_energy/: harness.sh  readme.md
tests/io/orca/test_io/multxyz_pop/: orca.yml
tests/io/orca/test_io/multxyz_pop/ch3f_diss/: ch3f_augccpVXZ.xyz  ch3f_augccpVXZ_3Ang.xyz  ch3f_augccpVXZ_4halfAng.xyz
tests/io/orca/test_io/singlet/: harness.sh  readme.md
tests/io/orca/test_io/vib_freq/: orca.yml
tests/io/orca/test_io/vib_freq/startfreq/: ch4.xyz  h2o.xyz
tests/io/orca/test_io/vpt2_h2o/: basejob.sh  harness.sh  inp.xyz  orca.yml  readme.md
tests/io/orca_inp_gen/: test_orcainpgen.py
tests/io/orca_inp_gen/test_orcainpgen/: basic.yml  brokensym.inp  expbrsym.yml
tests/io/test_io/h2/: harness.sh  readme.md
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/3-21G/: orca.out  slurm-211791.out
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-311G8/: orca.inp  orca.out  slurm-211794.out
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-311G88/: basejob.sh  orca.inp  slurm-211795.out
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-311PPG(2d,2p)/: orca.inp
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-311PPG(2df,2pd)/: orca.out
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-311PPG(3df,3pd)/: orca.inp  slurm-211799.out
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-311PPG88/: basejob.sh  orca.out  slurm-211796.out
tests/io/test_io/h2/h_h_mol/QCISD(T)/spin_01/ENERGY/6-31G/: basejob.sh  orca.out
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/3-21G/: basejob.sh  orca.inp  orca.out  slurm-211782.out
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/6-311G/: basejob.sh  orca.inp
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/6-311G8/: orca.out  slurm-211785.out
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/6-311G88/: orca.out  slurm-211786.out
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/6-311PPG(2d,2p)/: slurm-211788.out
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/6-311PPG(2df,2pd)/: basejob.sh  orca.out
tests/io/test_io/h2/h_h_mol/QCISD/spin_01/ENERGY/6-311PPG88/: basejob.sh  (+2 more)
tests/io/test_io/multiword_energy/: orca.yml
tests/io/test_io/singlet/: basejob.sh  inp.xyz  orca.yml
tests/io/xyz/: test_xyz.py
wailord/: __init__.py  __main__.py  _utils.py  cli.py  suite.py  utils.py
wailord/_templates/basicExperiment/hooks/: post_gen_project.py  pre_gen_project.py
wailord/_templates/basicExperiment/{{cookiecutter.project_slug}}/: LICENSE  basejob.sh  orca.yml
wailord/exp/: __init__.py  cookies.py
wailord/io/: __init__.py  inp.py  orca.py  xyz.py
wailord/tests/: test_utils.py
wailord_templates/basicExperiment/hooks/: post_gen_project.py  pre_gen_project.py
wailord_templates/basicExperiment/{{cookiecutter.project_slug}}/: basejob.sh  inp.xyz
(+238 files in other folders)
