[project]
name = "wailord"
version = "0.1.4"
description = "Wailord is a python library to interact with ORCA"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
]
maintainers = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
]
keywords = ["wailord", "quantum chemistry", "orca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "rgpycrumbs>=1.9.18",
    "chemparseplot>=1.9.8",
    "pint>=0.22",
    "pint-pandas>=0.5",
    "numpy>=1.26",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "vg>=2.0.0",
    "parsimonious>=0.10.0",
    "cookiecutter>=2.4.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
# Grammar track for XYZ / ORCA text (forwarded to chemparseplot)
grammar = ["chemparseplot[grammar]>=1.9.8"]
# Modern ORCA input generation
pychum = ["pychum>=1.4.0"]
suite = ["wailord[grammar,pychum]"]
test = [
  "pytest>=7.0",
  "pytest-datadir>=1.5.0",
  "chemparseplot[grammar]>=1.9.8",
]

[project.urls]
Homepage = "https://wailord.xyz"
Repository = "https://github.com/HaoZeke/wailord"
Documentation = "https://wailord.xyz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "wailord/**",
  "/tests",
  "/README.rst",
  "/LICENSE",
  "/HISTORY.rst",
  "/AUTHORS.rst",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["wailord"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.venv-*",
  "/.github",
  "/docs",
  "/pdm.lock",
  "/pixi.lock",
  "/pixi.toml",
  "/uv.lock",
  "/.pytest_cache",
]

[project.scripts]
run = "wailord.cli:main"

[tool.ruff]
line-length = 80
target-version = ['py310']
select = [
    "NPY",
    "I",
    "RUF",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.17",
]
docs = [
    "sphinx>=7.1.2",
    "sphinxcontrib-apidoc>=0.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-sitemap>=2.5.1",
    "sphinx-togglebutton>=0.3.2",
]
test = [
    "pytest>=7.4.3",
    "pytest-datadir>=1.5.0",
]

[tool.pdm.scripts]
lint = "ruff"
all = {composite = ["lint wailord/"]}



