[project]
name = "wailord"
version = "0.1.5"
description = "Wailord is a python library to interact with ORCA"
readme = "README.rst"
# LICENSE is GPLv3; keep packaging metadata aligned for pip check / conda-forge.
license = {text = "GPL-3.0-only"}
authors = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
]
maintainers = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
]
keywords = ["wailord", "quantum chemistry", "orca"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
# Runtime-only deps (docs/lint stay in optional/pdm groups). All of these are on
# conda-forge so `pip check` can pass in a conda env without workarounds.
dependencies = [
    "rgpycrumbs>=1.10.10",
    "chemparseplot>=1.9.17",
    "pint>=0.22",
    "pint-pandas>=0.5",
    "numpy>=1.26",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "parsimonious>=0.10.0",
    "cookiecutter>=2.4.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
# Grammar track for XYZ / ORCA text (forwarded to chemparseplot)
grammar = ["chemparseplot[grammar]>=1.9.17"]
# Modern ORCA input generation
pychum = ["pychum>=1.4.0"]
# One-shot install for full suite peers (grammar + pychum)
suite = ["wailord[grammar,pychum]"]
test = [
  "pytest>=7.0",
  "pytest-datadir>=1.5.0",
  "chemparseplot[grammar]>=1.9.17",
]
docs = [
  "sphinx>=7.1.2",
  "sphinxcontrib-apidoc>=0.4.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-sitemap>=2.5.1",
  "sphinx-togglebutton>=0.3.2",
  "sphinx-library>=1.1.3",
]

[project.urls]
Homepage = "https://wailord.xyz"
Repository = "https://github.com/HaoZeke/wailord"
Documentation = "https://wailord.xyz"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "wailord/**",
  "/tests",
  "/README.rst",
  "/LICENSE",
  "/HISTORY.rst",
  "/AUTHORS.rst",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["wailord"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.venv-*",
  "/.github",
  "/docs",
  "/pdm.lock",
  "/pixi.lock",
  "/pixi.toml",
  "/uv.lock",
  "/.pytest_cache",
]

[project.scripts]
run = "wailord.cli:main"

[tool.ruff]
line-length = 80
target-version = ['py311']
select = [
    "NPY",
    "I",
    "RUF",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.0.17",
]
docs = [
    "sphinx>=7.1.2",
    "sphinxcontrib-apidoc>=0.4.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-sitemap>=2.5.1",
    "sphinx-togglebutton>=0.3.2",
]
test = [
    "pytest>=7.4.3",
    "pytest-datadir>=1.5.0",
]

[tool.pdm.scripts]
lint = "ruff"
all = {composite = ["lint wailord/"]}



